Fix header spacing

--- a/punks.auction/app/assets/css/components/page-head.css
+++ b/punks.auction/app/assets/css/components/page-head.css
@@ -1,5 +1,5 @@
 .page-head h1 {
-  margin: 0 0 var(--size-1);
+  margin: 0;
   font-weight: var(--font-weight-bold);
   font-size: var(--font-xl);
   letter-spacing: var(--letter-spacing-tight);
